2010-05-13  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc.texi: Remove "\turnoffactive" commands througout.

2010-05-08  Štěpán Němec  <stepnem@gmail.com>  (tiny change)

	* url.texi (HTTP language/coding, Customization):
	* message.texi (Header Commands, Responses):
	* cl.texi (Argument Lists): Fix typos.

2010-05-08  Chong Yidong  <cyd@stupidchicken.com>

	* ede.texi (EDE Mode): Refer to init file rather than `.emacs'.
	Note that Development menu is always available.
	(Creating a project): Fix terminology.
	(Add/Remove files): Fix typo.

2010-05-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.2 released.

2010-05-01  Daniel E. Doherty <ddoherty03@gmail.com> (tiny change)

	* calc.texi (Tutorial): Use "^{\prime}" to indicate primes.

2010-05-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Inline methods, Default Method):
	Mention `tramp-inline-compress-start-size'.

2010-04-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus.texi (Gnus Versions, Oort Gnus): Mention the Git repo instead of
	the CVS repo.  Put the Git repo in the news section.

	* gnus-coding.texi (Gnus Maintainance Guide): Fix title typo.
	Removed some mentions of CVS.  Mention the new Git repo.

2010-04-18  Andreas Seltenreich  <seltenreich@gmx.de>

	* gnus.texi (Score File Format): Fix typo.  Reported by Štěpán Němec.
	(Mail Group Commands): Add index entry.

2010-04-18  Glenn Morris  <rgm@gnu.org>

	* info.texi (Search Index): Mention Emacs's Info-virtual-index.

2010-04-18  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc.texi (Radix modes): Mention that the option prefix will
	turn on twos-complement mode.
	(Inverse and Hyperbolic Flags): Mention the Option flag.

2010-04-15  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.texi (LaTeX and PDF export): Add a footnote about xetex.
	(LaTeX/PDF export commands): Rename and Move section.
	(Sectioning structure): Update.
	(References): New use case for field coordinates.